--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 asgiref==3.2.10
+cmake==3.18.2.post1
+distro==1.5.0
+dj-database-url==0.5.0
 Django==3.1.2
+django-heroku==0.3.1
 gunicorn==20.0.4
+image==1.5.32
+numpy==1.19.2
+packaging==20.4
+Pillow==8.0.0
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
+pyparsing==2.4.7
 pytz==2020.1
+scikit-build==0.11.1
+six==1.15.0
 sqlparse==0.4.1
 whitenoise==5.2.0
