--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ Django==3.1.2
 django-heroku==0.3.1
 gunicorn==20.0.4
 image==1.5.32
+imutils==0.5.3
 numpy==1.19.2
+opencv-contrib-python==4.2.0.34
+opencv-python==4.4.0.44
 packaging==20.4
 Pillow==8.0.0
 psycopg2==2.8.6
