--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ addict==2.4.0
 albumentations==0.5.2
 asgiref==3.2.10
 astor==0.8.1
+astroid==2.4.2
+autoflake==1.4
 cached-property==1.5.2
 cachetools==4.2.0
 certifi==2020.6.20
@@ -34,17 +36,17 @@ imageio-ffmpeg==0.4.2
 imgaug==0.4.0
 importlib-metadata==3.1.1
 imutils==0.5.3
+isort==5.6.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
 Markdown==3.3.3
 matplotlib==3.3.3
-moviepy==1.0.3
+mccabe==0.6.1
 networkx==2.5
 numpy==1.19.4
 oauthlib==3.1.0
-opencv-contrib-python==4.2.0.34
-opencv-python==4.4.0.44
 opencv-python-headless==4.2.0.32
 packaging==20.4
 Pillow==8.0.0
@@ -54,6 +56,8 @@ psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyflakes==2.2.0
+pylint==2.6.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
@@ -74,9 +78,11 @@ tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 tifffile==2020.9.3
+toml==0.10.2
 torch==1.7.1
 torchvision==0.8.2
 tqdm==4.54.1
+typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.11
 Werkzeug==1.0.1
