--- a/requirements.txt
+++ b/requirements.txt
@@ -79,8 +79,8 @@ tensorflow-estimator==1.14.0
 termcolor==1.1.0
 tifffile==2020.9.3
 toml==0.10.2
-torch==1.3.1 --find-links  https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
-torchvision==0.4.2 --find-links  https://download.pytorch.org/whl/cpu/torchvision-0.4.2%2Bcpu-cp37-cp37m-linux_x86_64.whl
+torch==1.6.0+cpu
+torchvision==0.7.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 tqdm==4.54.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
