--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--f https://download.pytorch.org/whl/torch_stable.html
 absl-py==0.11.0
 addict==2.4.0
 albumentations==0.5.2
@@ -43,7 +42,6 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
-Markdown==3.3.3
 matplotlib==3.3.3
 mccabe==0.6.1
 networkx==2.5
@@ -81,11 +79,8 @@ tensorflow-estimator==1.14.0
 termcolor==1.1.0
 tifffile==2020.9.3
 toml==0.10.2
-torch==1.6.0+cpu
-torchvision==0.7.0+cpu
+torch==1.7.1+cpu torchvision==0.8.2+cpu torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
 tqdm==4.54.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
 urllib3==1.25.11
 Werkzeug==1.0.1
 whitenoise==5.2.0
