Cleaned requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ albumentations==0.5.2
 asgiref==3.2.10
 astor==0.8.1
 astroid==2.4.2
+astunparse==1.6.3
 autoflake==1.4
 cached-property==1.5.2
 cachetools==4.2.0
@@ -21,15 +22,15 @@ dj-database-url==0.5.0
 Django==3.1.2
 django-heroku==0.3.1
 face-detection==0.2.1
+flatbuffers==1.12
 future==0.18.2
-gast==0.4.0
+gast==0.3.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.34.0
-grpcio-tools==1.34.0
+grpcio==1.32.0
 gunicorn==20.0.4
-h5py==3.1.0
+h5py==2.10.0
 idna==2.8
 image==1.5.32
 imageio==2.9.0
@@ -42,12 +43,15 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
+Markdown==3.3.3
 matplotlib==3.3.3
 mccabe==0.6.1
 networkx==2.5
 numpy==1.19.4
 oauthlib==3.1.0
+opencv-python==4.4.0.46
 opencv-python-headless==4.2.0.32
+opt-einsum==3.3.0
 packaging==20.4
 Pillow==8.0.0
 proglog==0.1.9
@@ -72,13 +76,18 @@ scipy==1.3.3
 Shapely==1.7.1
 six==1.15.0
 sqlparse==0.4.1
-https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow_cpu-2.4.0-cp36-cp36m-manylinux2010_x86_64.whl
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow-cpu @ https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow_cpu-2.4.0-cp36-cp36m-manylinux2010_x86_64.whl
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
 tifffile==2020.9.3
 toml==0.10.2
-https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.8.2%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch==1.7.1+cpu
+torchaudio==0.7.2
+torchvision==0.8.2+cpu
 tqdm==4.54.1
+typing-extensions==3.7.4.3
 urllib3==1.25.11
 Werkzeug==1.0.1
 whitenoise==5.2.0
