--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ mccabe==0.6.1
 networkx==2.5
 numpy==1.19.4
 oauthlib==3.1.0
+opencv-python-headless==4.2.0.32
 opt-einsum==3.3.0
 packaging==20.4
 Pillow==8.0.0
