--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ decorator==4.4.2
 distro==1.5.0
 dj-database-url==0.5.0
 Django==3.1.2
-django-heroku==0.3.1
 face-detection==0.2.1
 flatbuffers==1.12
 future==0.18.2
@@ -77,6 +76,8 @@ six==1.15.0
 sqlparse==0.4.1
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
+tensorflow-cpu @ https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow_cpu-2.4.0-cp36-cp36m-manylinux2010_x86_64.whl
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
 tifffile==2020.9.3
 toml==0.10.2
