--- a/requirements.txt
+++ b/requirements.txt
@@ -2,75 +2,57 @@ absl-py==0.11.0
 addict==2.4.0
 albumentations==0.5.2
 asgiref==3.2.10
-astor==0.8.1
-astroid==2.4.2
 astunparse==1.6.3
-autoflake==1.4
 cached-property==1.5.2
 cachetools==4.2.0
-certifi==2020.6.20
-chardet==3.0.4
-cli-exit-tools==1.1.8
-click==7.1.2
-cmake==3.18.2.post1
-comtypes==1.1.7
+certifi==2020.12.5
+chardet==4.0.0
 cycler==0.10.0
 dataclasses==0.8
 decorator==4.4.2
-distro==1.5.0
 dj-database-url==0.5.0
 Django==3.1.2
 face-detection==0.2.1
 flatbuffers==1.12
-future==0.18.2
 gast==0.3.3
-google-auth==1.23.0
+google-auth==1.24.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.32.0
-gunicorn==20.0.4
 h5py==2.10.0
-idna==2.8
+idna==2.10
 image==1.5.32
 imageio==2.9.0
-imageio-ffmpeg==0.4.2
 imgaug==0.4.0
-importlib-metadata==3.1.1
+importlib-metadata==3.4.0
 imutils==0.5.3
-isort==5.6.4
+install==1.3.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
 Markdown==3.3.3
 matplotlib==3.3.3
-mccabe==0.6.1
 networkx==2.5
-numpy==1.19.4
+numpy==1.19.5
 oauthlib==3.1.0
-opencv-python-headless==4.2.0.32
+opencv-python==4.5.1.48
+opencv-python-headless==4.5.1.48
 opt-einsum==3.3.0
-packaging==20.4
-Pillow==8.0.0
-proglog==0.1.9
+Pillow==8.1.0
+pkg-resources==0.0.0
 protobuf==3.14.0
-psycopg2==2.8.6
-psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyflakes==2.2.0
-pylint==2.6.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
-pytz==2020.1
+pytz==2020.5
 PyWavelets==1.1.1
 PyYAML==5.3.1
-requests==2.22.0
+requests==2.25.1
 requests-oauthlib==1.3.0
-rsa==4.6
-scikit-build==0.11.1
+rsa==4.7
 scikit-image==0.17.2
-scipy==1.3.3
+scipy==1.5.4
 Shapely==1.7.1
 six==1.15.0
 sqlparse==0.4.1
@@ -80,12 +62,12 @@ tensorflow-cpu @ https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow_
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 tifffile==2020.9.3
-toml==0.10.2
-https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.8.2%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch==1.7.1+cpu
+torchaudio==0.7.2
+torchvision==0.8.2+cpu
 tqdm==4.54.1
 typing-extensions==3.7.4.3
-urllib3==1.25.11
+urllib3==1.26.2
 Werkzeug==1.0.1
 whitenoise==5.2.0
 wrapt==1.12.1
